	Don't start the stream on boot or reload of the script if box is in standby
	Fixed error getting german languages file.
	Get server ip from flash
	Bugfix, removed delayed play (in case of error) when you already start to play a recording
	Save old position before jump forward. In case of ongoing recording and jump position isn't recorded yet you don't start replay at 0
	News info from nu.nl (nl), dw.de (en/de), spiegel.de (en/de) 
	Powerserverdown shares now blue button with restart script (almost nobody uses powerserverdown)


0.26	Fix for [undefined] in (search)timer menu when there are no (search)timers on server
	Changed Plugin check, only check if digit 1,2,3 from server ip & box ip are the same.
	Updated epgfilter for CDS on 19.2E, Brava HDTV on 23.2E
	Added parameter to bash script, if set script uses 'svdrpsend.pl', if not 'svdrpsend'
	Fixed show ext epg info if ext info != short info.
	Moved script to main.js
	Display shows R/F + channelnumber ('R' for Radio, 'F' for favorite)
	Skinning, CSS styling (<menu> <1> <blue> changes skin, restart script needed)
	In osd timeleft can't be more 24h (Gives a long number when box has no internet or time is totally wrong)
	Timed change, set to 0 for old behavior (press ok for change)
	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
	add to favorite now refreshes view
	Updated remote keys in settings file.
	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
	NYX remote hase no stopkey so key 'back' does the same as stop.
	Fixed Standby while playback.
	(For Easyvdr & SmartWebTV plugin) Menu + red send Server Power Down. (Define it in vdr's 'commands.conf')
	Added global multicast setting, removed testing3 (multicasting test)
	Added config/custom.js, override global settings, define local settings (setting file isn't included in the download/distro)