@@ -95,39 +95,39 @@ channels[53]="S28.2E-2-2009-6204";
 channelsnames[54]="Disc.History";
 channels[54]="S28.2E-2-2009-6207";
 channelsnames[55]="Disc.History+1";
-channels[55]="S28.2E-2-2315-52435";
+channels[55]="S28.2E-0-0-52435";
 channelsnames[56]="TLC";
 channels[56]="S28.2E-2-2009-6233";
 channelsnames[57]="TLC+1";
-channels[57]="S28.2E-2-2315-52446";
+channels[57]="S28.2E-0-0-52446";
 channelsnames[58]="Disc.Science";
 channels[58]="S28.2E-2-2009-6206";
 channelsnames[59]="Disc.Sci+1";
-channels[59]="S28.2E-2-2315-52410";
+channels[59]="S28.2E-0-0-52410";
 channelsnames[60]="Disc.Turbo";
 channels[60]="S28.2E-2-2009-6209";
 channelsnames[61]="Discovery Shed";
-channels[61]="S28.2E-2-2315-52440";
+channels[61]="S28.2E-2-2407-52440";
 channelsnames[62]="Home & Health";
 channels[62]="S28.2E-2-2009-6208";
 channelsnames[63]="Home&Health+";
-channels[63]="S28.2E-2-2315-52450";
+channels[63]="S28.2E-0-0-52450";
 channelsnames[64]="ID";
-channels[64]="S28.2E-2-2315-52400";
+channels[64]="S28.2E-0-0-52400";
 channelsnames[65]="ID+1";
-channels[65]="S28.2E-2-2315-52426";
+channels[65]="S28.2E-0-0-52426";
 channelsnames[66]="DMAX";
-channels[66]="S28.2E-2-2315-52415";
+channels[66]="S28.2E-0-0-52415";
 channelsnames[67]="DMAX+1";
-channels[67]="S28.2E-2-2315-52420";
+channels[67]="S28.2E-0-0-52420";
 channelsnames[68]="QUEST";
 channels[68]="S28.2E-2-2009-6211";
 channelsnames[69]="QUEST+1";
-channels[69]="S28.2E-2-2315-52430";
+channels[69]="S28.2E-0-0-52430";
 channelsnames[70]="Animal Planet";
 channels[70]="S28.2E-2-2009-6202";
 channelsnames[71]="Animal Plnt+1";
-channels[71]="S28.2E-2-2315-52405";
+channels[71]="S28.2E-0-0-52405";
 channelsnames[72]="Eden";
 channels[72]="S28.2E-2-2006-6502";
 channelsnames[73]="Eden+1";
@@ -158,6 +158,8 @@ channelsnames[85]="Real Time";
 channels[85]="S13.0E-64511-5700-4324";
 channelsnames[86]="Real Time +1";
 channels[86]="S13.0E-64511-800-1469";
+channelsnames[87]="EBRU TV";
+channels[87]="S19.2E-133-33-76";
 channelsnames[90]="TV Oost";
 channels[90]="S23.5E-3-3211-20814";
 channelsnames[91]="Omrop Fryslan Televisie";
@@ -190,11 +192,11 @@ channelsnames[104]="Sky Action";
 channels[104]="S28.2E-2-2007-4302";
 channelsnames[105]="Sky Family";
 channels[105]="S28.2E-2-2007-4403";
-channelsnames[106]="Sky Crime";
+channelsnames[106]="Sky Thriller";
 channels[106]="S28.2E-2-2007-4406";
-channelsnames[107]="Sky Valentine";
+channelsnames[107]="Sky DramaRom";
 channels[107]="S28.2E-2-2007-5502";
-channelsnames[108]="Sky ScFi/Horror";
+channelsnames[108]="Sky Monsters";
 channels[108]="S28.2E-2-2007-4304";
 channelsnames[109]="Sky Greats";
 channels[109]="S28.2E-2-2007-5650";
@@ -662,7 +664,7 @@ channelsnames[483]="Sky Nostalgie,Nostalgie";
 channels[483]="S19.2E-133-3-516";
 channelsnames[484]="Sky Sport 1,Sport1";
 channels[484]="S19.2E-133-4-221";
-channelsnames[485]="Sky Sport 2,Sport2";
+channelsnames[485]="INTER - WOL";
 channels[485]="S19.2E-133-4-222";
 channelsnames[486]="N24 Austria";
 channels[486]="S19.2E-133-7-53";
@@ -1164,7 +1166,7 @@ channelsnames[1012]="Travel Channel HD WE";
 channels[1012]="S23.5E-3-3221-5056";
 channelsnames[1013]="NGC HD";
 channels[1013]="S23.5E-3-3222-20965";
-channelsnames[1014]="Viasat HD";
+channelsnames[1014]="Viasat HD OBSOLETE";
 channels[1014]="S23.5E-3-3208-7040";
 channelsnames[1015]="Nat Geo Wild HD DUT";
 channels[1015]="S23.5E-3-3226-709";
@@ -1544,25 +1546,25 @@ channelsnames[2066]="R. Musicales";
 channels[2066]="S30.0W-49-2-364";
 channelsnames[2067]="RADIO MARIA";
 channels[2067]="S30.0W-40-13-8";
-channelsnames[2068]="Cadena 100";
+channelsnames[2068]="Cadena 100 OBSOLETE";
 channels[2068]="S30.0W-40-13-10";
 channelsnames[2069]="HIT FM";
 channels[2069]="S30.0W-40-13-26";
 channelsnames[2070]="Radio MARCA";
 channels[2070]="S30.0W-40-13-29";
-channelsnames[2071]="COPE";
+channelsnames[2071]="COPE OBSOLETE";
 channels[2071]="S30.0W-40-13-37";
-channelsnames[2072]="INTERECONOMIA";
+channelsnames[2072]="INTERECONOMIA OBSOLETE";
 channels[2072]="S30.0W-40-13-38";
-channelsnames[2073]="MegaStar";
+channelsnames[2073]="MegaStar OBSOLETE";
 channels[2073]="S30.0W-40-13-39";
-channelsnames[2074]="ROCK FM";
+channelsnames[2074]="ROCK FM OBSOLETE";
 channels[2074]="S30.0W-40-13-52";
 channelsnames[2075]="EMA RADIO";
 channels[2075]="S30.0W-40-13-54";
 channelsnames[2076]="TSF ON M";
 channels[2076]="S30.0W-40-13-55";
-channelsnames[2077]="RADIO HIT";
+channelsnames[2077]="RADIO HIT OBSOLETE";
 channels[2077]="S30.0W-40-13-58";
 channelsnames[2078]="Disney Channel";
 channels[2078]="S30.0W-40-13-900";
@@ -2430,7 +2432,7 @@ channelsnames[3519]="PLS TV";
 channels[3519]="S42.0E-66-3-1333";
 channelsnames[3520]="KRM TV";
 channels[3520]="S42.0E-66-3-1335";
-channelsnames[3521]="HZN TV";
+channelsnames[3521]="MÜZİK TÜRK";
 channels[3521]="S42.0E-66-3-1337";
 channelsnames[3522]="NİSA TV";
 channels[3522]="S42.0E-66-3-1339";
@@ -3250,7 +3252,7 @@ channelsnames[6015]="PRIVATE TV";
 channels[6015]="S13.0E-318-13300-4960";
 channelsnames[6016]="FL TV";
 channels[6016]="S13.0E-318-15400-13512";
-channelsnames[6017]="Venus";
+channelsnames[6017]="Venus OLD";
 channels[6017]="S30.0W-83-105-502";
 channelsnames[6018]="Leo TV";
 channels[6018]="S23.5E-3-3219-13142";
@@ -3278,7 +3280,7 @@ channelsnames[6029]="Penthouse 3D";
 channels[6029]="S23.5E-3-3204-5311";
 channelsnames[6030]="EROXXX";
 channels[6030]="S23.5E-3-3212-14055";
-channelsnames[6031]="Brazzers.tv";
+channelsnames[6031]="Brazzers.tv OBSOLETE";
 channels[6031]="S23.5E-3-3202-6072";
 channelsnames[6032]="Hustler HD-3D";
 channels[6032]="S13.0E-318-15800-16933";
@@ -3288,7 +3290,7 @@ channelsnames[6034]="PENTHOUSE HD";
 channels[6034]="S19.2E-1-1086-9907";
 channelsnames[6035]="PLAYBOY TV";
 channels[6035]="S19.2E-1-1060-30603";
-channelsnames[6036]="Brazzers.tv CZ";
+channelsnames[6036]="Brazzers.tv CZ OBSOLETE";
 channels[6036]="S23.5E-3-3202-6073";
 channelsnames[6037]="Penthouse";
 channels[6037]="S23.5E-3-3222-20917";
@@ -3310,7 +3312,7 @@ channelsnames[6045]="Penthouse HD1";
 channels[6045]="S23.5E-3-3236-5712";
 channelsnames[6046]="Penthouse HD2";
 channels[6046]="S23.5E-3-3236-5713";
-channelsnames[6047]="Service 13015";
+channelsnames[6047]="Mei Musi TV";
 channels[6047]="S19.2E-1-1117-13015";
 channelsnames[8001]="NPO 1";
 channels[8001]="T-8720-2214-1101";
@@ -3498,7 +3500,7 @@ channelsnames[9050]="Arrow Classic Rock";
 channels[9050]="S23.5E-3-3211-20892";
 channelsnames[9051]="ROCK ANTENNE,ROCK ANT";
 channels[9051]="S19.2E-133-7-160";
-channelsnames[9052]="Planet Rock";
+channelsnames[9052]="Planet Rock OBSOLETE";
 channels[9052]="S28.2E-2-2407-9575";
 channelsnames[9053]="Radio Beat";
 channels[9053]="S23.5E-3-3209-13120";
@@ -3608,4 +3610,4 @@ defChan[6] = minChan[6]; protChn[6] = 1;
 defChan[7] = minChan[7]; protChn[7] = 0;
 defChan[8] = minChan[8]; protChn[8] = 0;
 defChan[9] = minChan[9]; protChn[9] = 0;
-Chan_Ver = "02/06/15 13:58:04" ;
+Chan_Ver = "03/22/15 17:01:38" ;
